control-plane/examples/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ngxora
      namespace: default
  hostnames:
    - localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Added-By
                value: ngxora
            set:
              - name: X-Gateway-Version
                value: "1.0.0"
            remove: ["X-Phished"]
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Server
                value: ngxora-proxy
      backendRefs:
        - name: example-svc
          port: 8080
